objects/LLC_BI__Tenant_Information__c.object
<CustomObject>
    <description>Information about tenants</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Whats this one</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_End__c</fullName>
        <label>Lease End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Origination__c</fullName>
        <label>Lease Origination</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Type__c</fullName>
        <label>Lease Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Rent__c</fullName>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Occupied_Units__c</fullName>
        <label># Of Occupied Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent_Tenant_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recursive lookup to signify non-primary scenario</description>
        <label>Parent Tenant Information</label>
        <referenceTo>LLC_BI__Tenant_Information__c</referenceTo>
        <relationshipLabel>Tenant Information</relationshipLabel>
        <relationshipName>Child_Tenant_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Price_Per_Sq_Ft_Per_Year__c</fullName>
        <description>How much does that square foot cost</description>
        <label>Price Per Sq Ft Per Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario__c</fullName>
        <description>Which scenario is this one</description>
        <label>Scenario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Searchable_Tenant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This determines whether or not the the tenant name field for this tenant should appear in the rent roll fuzzy search type ahead</description>
        <label>Searchable Tenant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spread Statement Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Tenant Information</relationshipLabel>
        <relationshipName>Tenant_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which statement does this tenant belong to. This is used to template-ize rent rolls, and is not required to be set on actual tenant info data.</description>
        <label>Spread Statement Template</label>
        <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
        <relationshipLabel>Tenant Information</relationshipLabel>
        <relationshipName>Tenant_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sq_Feet__c</fullName>
        <description>How many feet are square</description>
        <label>Sq Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tenant_Name__c</fullName>
        <label>Tenant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tenant_Type__c</fullName>
        <description>What type of tenant is this one</description>
        <label>Tenant Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Units__c</fullName>
        <description>Optional field</description>
        <label># Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>Type of commercial tenant</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anchor</fullName>
                </value>
                <value>
                    <fullName>Shadow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Unit_Type__c</fullName>
        <label>Unit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tenant Information</label>
    <nameField>
        <label>Tenant Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenant Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>